# floatguard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSE.Apache-2.0.md  README.md  index.html  knope.toml
.changeset/: add_assignment_operation_implementations_for_unguardedf64.md  added_support_for_guardedf32_and_unguardedf32_types.md  hide_internal_macros_from_exported_code.md  refactor_floaterror_to_represent_f64nan_f64infinity_and_f64neg_infinity_states.md  strict_guardedf64_comparisons.md
.github/: CODEOWNERS
.github/workflows/: benchmarks.yml  ci.yml  gh-pages.yml  release.yml
benches/: cmp.rs  math.rs  ops_binary.rs  ops_unary.rs
benchmarks/: index.html
benchmarks/main-/GuardedF64__abs/report/: index.html
benchmarks/main-/GuardedF64__acosh/new/: tukey.json
benchmarks/main-/GuardedF64__add/new/: sample.json
benchmarks/main-/GuardedF64__eq/new/: tukey.json
benchmarks/main-/GuardedF64__powf/base/: sample.json
benchmarks/main-/GuardedF64__powi/report/: index.html
benchmarks/main-/GuardedF64__signum/new/: tukey.json
benchmarks/main-/GuardedF64__sin/base/: estimates.json
benchmarks/main-/GuardedF64__sub/new/: benchmark.json
benchmarks/main-/GuardedF64__tan/new/: benchmark.json
benchmarks/main-/UnguardedF64__abs/new/: sample.json
benchmarks/main-/UnguardedF64__asinh/report/: index.html
benchmarks/main-/UnguardedF64__atan2/new/: benchmark.json
benchmarks/main-/UnguardedF64__div/base/: tukey.json
benchmarks/main-/UnguardedF64__recip/report/: index.html
benchmarks/main-/UnguardedF64__sin/report/: index.html
benchmarks/main/report/: index.html
benchmarks/v0-1-0/report/: index.html
proptest-regressions/guarded_f64/: math.txt  ops_binary.txt
proptest-regressions/guarded_f64/lazy/: ops_assign.txt
scripts/: build.mjs
src/: checked_f64.rs  error.rs  lib.rs
src/checked_f64/: cmp.rs  consts.rs  math.rs  mod.rs  ops.rs  ops_binary.rs  ops_unary.rs
src/checked_f64/eager/: cmp.rs  mod.rs
src/checked_f64/lazy/: mod.rs
src/f32/: consts.rs  convert.rs  math.rs  mod.rs  ops_binary.rs  ops_unary.rs
src/f32/guarded/: cmp.rs  convert.rs  mod.rs
src/f32/unguarded/: convert.rs  mod.rs  ops_assign.rs
src/f64/: consts.rs  convert.rs  math.rs  mod.rs  ops_binary.rs  ops_unary.rs
src/f64/guarded/: cmp.rs  convert.rs  mod.rs
src/f64/unguarded/: convert.rs  mod.rs  ops_assign.rs
src/guarded_f64/: consts.rs  convert.rs  math.rs  mod.rs  ops_binary.rs  ops_unary.rs
src/guarded_f64/eager/: cmp.rs  convert.rs  mod.rs
src/guarded_f64/lazy/: convert.rs  mod.rs  ops_assign.rs
src/macros/: consts.rs  math.rs  mod.rs  ops_assign.rs  ops_binary.rs  ops_unary.rs
(+4542 files in other folders)
