[package]
name = "checked-float"
version = "0.1.0"
edition = "2024"
authors = ["Steven Jimenez <stevenmjimenez@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for checked floating-point arithmetic in Rust, safely elminating NaN and Infinity from floating-point computations."
repository = "https://github.com/stevethedev/checked-float-rs"
homepage = "https://github.com/stevethedev/checked-float-rs"
documentation = "https://docs.rs/checked-float"
keywords = ["float", "f64", "nan", "infinity", "checked"]
categories = ["mathematics", "science", "no-std"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
proptest = "1.7"
