[package]
name = "floatguard"
version = "0.1.1"
edition = "2024"
authors = ["Steven Jimenez <stevenmjimenez@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for checked floating-point arithmetic in Rust, safely elminating NaN and Infinity from floating-point computations."
repository = "https://github.com/stevethedev/floatguard-rs"
homepage = "https://github.com/stevethedev/floatguard-rs"
documentation = "https://docs.rs/floatguard"
keywords = ["float", "f64", "nan", "infinity", "checked"]
categories = ["mathematics", "science", "no-std"]
readme = "README.md"
exclude = [
    ".github/*",
    "benches/*",
    "target/*",
]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
criterion = "0.6"
proptest = "1.7"

[[bench]]
name = "cmp"
harness = false

[[bench]]
name = "math"
harness = false

[[bench]]
name = "ops_binary"
harness = false

[[bench]]
name = "ops_unary"
harness = false
